--- a/test/makefile
+++ b/test/makefile
@@ -1,3 +1,3 @@
 
-test: test.cpp ../engine.a
-	g++ -std=c++11 -Og -g -I../include -I../include/renderer $^ -o $@ -lSDL2
+test: test.cpp ../engine.a test_state.h
+	g++ -std=c++11 -Og -g -fno-rtti -I../include -I../include/renderer $^ -o $@ -lSDL2
