--- a/src/makefile
+++ b/src/makefile
@@ -10,7 +10,7 @@ CXXFLAGS := $(includes) -std=c++11 -ffast-math -fno-rtti -fno-exceptions
 ifdef RELEASE
     CXXFLAGS += -Os -fno-stack-protector -U_FORTIFY_SOURCE
 else
-    CXXFLAGS += -Og -g
+    CXXFLAGS += -Og -g -DDEBUG
 endif
 
 all: $(output)
