Improve makefile and rename shaders to get syntax highlighting.

--- a/src/makefile
+++ b/src/makefile
@@ -4,9 +4,7 @@ builddir := ../build/$(OS)
 headers := $(foreach dir,$(dirs),$(wildcard ../include/$(dir)/*.h))
 sources := $(foreach dir,$(dirs),$(wildcard $(dir)/*.cpp))
 objects := $(patsubst %.cpp,$(builddir)/%.o,$(sources))
-includes := $(foreach dir,$(dirs),-I../include/$(dir))
-includes += -I../build/
-embeds := $(wildcard ../build/embed_data/*)
+includes := $(foreach dir,$(dirs),-I../include/$(dir)) -I../build/
 CXXFLAGS := $(includes) -std=c++11 -ffast-math -fno-rtti -fno-exceptions
 
 ifdef RELEASE
@@ -15,7 +13,7 @@ else
     CXXFLAGS += -Og -g -DDEBUG
 endif
 
-all: $(output)
+all: $(output) 
 
 $(output): $(objects)
 	$(AR) rcs $@ $^
@@ -23,11 +21,10 @@ $(output): $(objects)
 $(builddir)/%.o: %.cpp $(headers) ../build/internal.zip
 	$(CXX) $(CXXFLAGS) -c $< -o $@
 
-../build/internal.zip: $(embeds)
-	zip -j $@ $^
+../build/internal.zip: ../build/embed_data
+	zip -j -r $@ $<
 
 clean:
 	rm -f ../build/internal.zip $(objects) $(output) *~
 
 .PHONY: all clean
-
