--- a/test/makefile
+++ b/test/makefile
@@ -1,5 +1,5 @@
 includes := -I../include -I../include/renderer -I/usr/include/freetype2
-CXXFLAGS := -std=c++11 -pipe -Og -g -ffast-math -fno-rtti -DDEBUG
+CXXFLAGS := -std=c++1y -pipe -Og -g -ffast-math -fno-rtti -DDEBUG
 
 test: test.cpp ../engine.a test_state.h
 	g++ $(CXXFLAGS) $(includes) $^ -o $@ -lSDL2 -lphysfs -lfreetype
