--- a/test/makefile
+++ b/test/makefile
@@ -1,5 +1,5 @@
 includes := -I../include -I../include/renderer -I/usr/include/freetype2
 CXXFLAGS := -std=c++1y -Wall -Werror -pipe -Og -g -ffast-math -fno-rtti -DDEBUG
 
-test: test.cpp ../engine.a test_state.h
-	g++ $(CXXFLAGS) $(includes) $^ -o $@ -lSDL2 -lphysfs -lfreetype
+test: test.cpp ../engine.a test_state.h test_collision_state.h
+	g++ $(CXXFLAGS) $(includes) $< ../engine.a -o $@ -lSDL2 -lphysfs -lfreetype
