Better method of embedding the zip.

--- a/src/makefile
+++ b/src/makefile
@@ -3,7 +3,7 @@ output := ../engine.a
 builddir := ../build/$(OS)
 headers := $(foreach dir,$(dirs),$(wildcard ../include/$(dir)/*.h))
 sources := $(foreach dir,$(dirs),$(wildcard $(dir)/*.cpp))
-objects := $(patsubst %.cpp,$(builddir)/%.o,$(sources))
+objects := $(patsubst %.cpp,$(builddir)/%.o,$(sources)) $(builddir)/zip.o
 includes := $(foreach dir,$(dirs),-I../include/$(dir)) -I../build/ -I/usr/include/freetype2
 CXXFLAGS := $(includes) -std=c++1y -Wall -Werror -pipe -ffast-math -fno-rtti -fno-exceptions
 
@@ -18,11 +18,14 @@ all: $(output)
 $(output): $(objects)
 	$(AR) rcs $@ $^
 
-$(builddir)/%.o: %.cpp $(headers) ../build/internal.zip
-	$(CXX) $(CXXFLAGS) -c $< -o $@
-
 ../build/internal.zip: ../build/embed_data
 	zip -j -r $@ $<
+
+$(builddir)/zip.o: ../build/internal.zip
+	(cd $(<D) && $(LD) -r -b binary -o $@ $(<F))
+
+$(builddir)/%.o: %.cpp $(headers)
+	$(CXX) $(CXXFLAGS) -c $< -o $@
 
 clean:
 	rm -f ../build/internal.zip $(objects) $(output) *~
