Add some compatibility stuff so that it compiles with mingw-w64 4.8.

--- a/test/makefile
+++ b/test/makefile
@@ -2,4 +2,4 @@ includes := -I../include -I../include/renderer -I/usr/include/freetype2
 CXXFLAGS := -std=c++1y -Wall -Werror -pipe -Og -g -ffast-math -fno-rtti -DDEBUG
 
 test: test.cpp ../engine.a test_state.h test_collision_state.h
-	g++ $(CXXFLAGS) $(includes) $< ../engine.a -o $@ -lSDL2 -lphysfs -lfreetype
+	$(CXX) $(CXXFLAGS) $(includes) $< ../engine.a -o $@ -lSDL2 -lphysfs -lfreetype
