--- a/test/makefile
+++ b/test/makefile
@@ -8,13 +8,23 @@ LDFLAGS = -lphysfs -lfreetype $(shell /usr/$(PREFIX)/bin/sdl2-config --libs)
 CXX = $(PREFIX)-g++
 
 all: test
-win: test
 
+win: test
 win: PREFIX=i686-w64-mingw32
 win: LDFLAGS := -lmingw32 -lSDL2main $(LDFLAGS)
 win: SUFFIX=.exe
 
+js: test.html
+
+test.html:
+	emmake $(MAKE) -C emscripten
+
 test: test.cpp ../engine.a test_state.h test_collision_state.h
 	$(CXX) $(CXXFLAGS) $(includes) $< ../engine.a -o $@$(SUFFIX) $(LDFLAGS)
-	
+
+clean:
+	$(RM) test test.exe
+	$(MAKE) -C emscripten clean
+
+.PHONY: all win js
 
