--- a/src/makefile
+++ b/src/makefile
@@ -5,8 +5,11 @@ sources := $(foreach dir,$(dirs),$(wildcard $(dir)/*.cpp))
 depends := $(foreach dir,$(dirs),$(wildcard $(builddir)/$(dir)/*.d))
 objects := $(patsubst %.cpp,$(builddir)/%.o,$(sources)) $(builddir)/zip.o
 includes := $(foreach dir,$(dirs),-I../include/$(dir)) -I/usr/$(PREFIX)/include/freetype2
-CXXFLAGS := $(includes) -std=c++1y -Wall -pipe -ffast-math -fno-rtti -fno-exceptions\
- $(shell /usr/$(PREFIX)/bin/sdl2-config --cflags)
+CXXFLAGS := -std=c++1y -Wall -pipe -ffast-math -fno-rtti -fno-exceptions\
+ $(shell /usr/$(PREFIX)/bin/sdl2-config --cflags) -Wno-missing-braces
+
+#CXX := clang++-3.5
+#CXX := include-what-you-use
 
 ifdef PREFIX
 	CXX := $(PREFIX)-g++
@@ -17,7 +20,7 @@ endif
 ifdef RELEASE
     CXXFLAGS += -Os -fno-stack-protector -U_FORTIFY_SOURCE -fomit-frame-pointer
 else
-    CXXFLAGS += -O0 -g -DDEBUG
+    CXXFLAGS += -O0 -DDEBUG -g
 endif
 
 all: $(output) 
@@ -25,18 +28,21 @@ all: $(output)
 include $(depends)
 
 $(output): $(objects)
-	$(AR) rcs $@ $^
+	@echo [AR] $@
+	@$(AR) rcs $@ $^
 
 ../build/internal.zip: ../build/embed_data
-	zip -j -r $@ $<
+	@echo [ZIP] $<
+	@zip -j -r $@ $<
 
 $(builddir)/zip.o: ../build/internal.zip
-	(cd $(<D) && $(LD) -r -b binary -o $@ $(<F))
+	@(cd $(<D) && $(LD) -r -b binary -o $@ $(<F))
 
 $(builddir)/%.o: %.cpp
-	$(CXX) -MMD $(CXXFLAGS) -c $< -o $@
+	@echo [CXX] $<
+	@$(CXX) -MMD $(includes) $(CXXFLAGS) -c $< -o $@
 
 clean:
 	rm -f ../build/internal.zip $(objects) $(output) $(depends) *~
 
-.PHONY: all clean
+.PHONY: all clean FORCE
