--- a/test/makefile
+++ b/test/makefile
@@ -1,9 +1,12 @@
 includes = -I../include -I../include/renderer -I/usr/$(PREFIX)/include/freetype2
 
 CXXFLAGS = -std=c++1y -Wall -Werror -pipe -O0 -g -ffast-math -fno-rtti -DDEBUG \
-$(shell /usr/$(PREFIX)/bin/sdl2-config --cflags)
+$(shell /usr/$(PREFIX)/bin/sdl2-config --cflags) \
+$(shell pkg-config --cflags physfs)
 
-LDFLAGS = -lphysfs -lfreetype $(shell /usr/$(PREFIX)/bin/sdl2-config --libs)
+LDFLAGS = -lphysfs -lfreetype \
+$(shell /usr/$(PREFIX)/bin/sdl2-config --libs) \
+$(shell pkg-config --libs physfs)
 
 CXX = $(PREFIX)-g++
 
